# booking-fastapi

./: .env.example  .env_prod.example  .gitignore  Dockerfile  docker-compose.yml  grafana-dashboard.json  prometheus.yml  pyproject.toml  pytest.ini
app/: config.py  db.py  logger.py  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: a272e5abe4dc_initinal_migration.py  a3048f9f443f_fixed_some_column_fields.py  b063e3ddcbaa_fixed_some_column_type.py  b7509a38f562_added_booking_models.py  b9b75c6ac801_added_is_admin_field.py
app/src/: main.py
app/src/admin/: admin.py  auth.py
app/src/api/: auth.py  auth_router.py  bookings_router.py  dependencies.py  exceptions.py  hotels_router.py  images_router.py  pages_router.py  prometheus_router.py  rooms_router.py
app/src/models/: bookings.py  db.py  hotels.py  rooms.py  users.py
app/src/repositories/: base_repository.py  booking_repository.py  hotels_repository.py  rooms_repository.py  users_repository.py
app/src/schemas/: bookings_schema.py  hotels.py  hotels_schema.py  rooms_schemas.py  users_schema.py
app/src/services/: booking_service.py  hotels_service.py  rooms_service.py  users_service.py
app/src/tasks/: celery.py  tasks.py
app/src/templates/: hotels.html
app/static/templates/: hotels.html
app/tests/: conftest.py
app/tests/integration/api/: test_users.py
app/tests/integration/services/: test_bookings.py  test_user_services.py
app/tests/mock_data/: mock_users.json
app/tests/unit/api/: test_bookings.py  test_users.py
app/tests/unit/repositories/: test_users_repository.py
docker/: app.sh  celery.sh
