[tool.poetry]
name = "app"
version = "0.1.0"
description = "Simple FastAPI app"
authors = ["Denis Besfamilnyy <besfamilnyy.wrk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
pydantic-settings = "^2.0.3"
greenlet = "^3.0.1"
passlib = "^1.7.4"
email-validator = "^2.1.0.post1"
bcrypt = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120
extend-exclude = '/alembic'

[tool.isort]
py_version = 39
profile = 'black'
lines_between_types = 1
combine_as_imports = true
multi_line_output = 3
force_grid_wrap = 2
skip = ["alembic"]
