[tool.poetry]
name = "Booking demo app"
version = "0.1.0"
description = "Simple FastAPI app"
authors = ["Denis Besfamilnyy <besfamilnyy.wrk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
asyncpg = "^0.28.0"
jwt = "^1.3.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
fastapi-cache2 = "^0.2.1"
redis = "^5.0.1"
celery = "^5.3.6"
pillow = "^10.1.0"
pydantic-settings = "^2.1.0"
greenlet = "^3.0.1"
passlib = "^1.7.4"
email-validator = "^2.1.0.post1"
bcrypt = "^4.0.1"
sqladmin = "^0.16.0"
itsdangerous = "^2.1.2"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
